Settings work but needs more

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/die6.svg" />
+    <link rel="icon" type="image/svg+xml" href="/dice/die6.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta property="description" content="Search engine description" />
     <title>Vite + React</title>
   </head>
