--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/dice/die6.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta property="description" content="Search engine description" />
-    <title>Vite + React</title>
+    <title>Flotzzy By Dustin</title>
   </head>
   <body>
     <div id="root"></div>
